# image-background-removal

./: .gitignore  README.md  background_remover.py  main.py  pyproject.toml  remove_bg.py  requirements.txt  test_background_remover.py
